# tgfx-vcpkg-demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  update-tgfx-commit.js  update-tgfx.js  vcpkg-configuration.json  vcpkg.json
ohos/: build-profile.json5  vcpkg-configuration.json  vcpkg.json
ohos/AppScope/: app.json5
ohos/demo/: build-profile.json5  oh-package-lock.json5  oh-package.json5
ohos/demo/src/main/: module.json5
ohos/demo/src/main/cpp/: CMakeLists.txt  SimpleDemo.cpp  SimpleDemo.h  napi_init.cpp
ohos/demo/src/main/cpp/types/libdemo/: Index.d.ts  oh-package.json5
ohos/demo/src/main/ets/demoability/: DemoAbility.ets
ohos/demo/src/main/ets/pages/: Index.ets
ohos/demo/src/main/resources/en_US/element/: string.json
ohos/demo/src/main/resources/zh_CN/element/: string.json
ports/tgfx/: portfile.cmake  tgfx-config.cmake.in  tgfx-functions.cmake  usage  vcpkg.json
ports/tgfx/scripts/toolchains/: ohos.cmake
ports/tgfx/triplets/: arm-ohos.cmake  arm64-ohos.cmake
web/: build.js  package-lock.json  package.json  server.js  vcpkg-configuration.json  vcpkg.json
web/demo/: CMakeLists.txt  index.html
web/demo/src/: TGFXBaseView.cpp  TGFXThreadsView.cpp  TGFXView.cpp  TGFXView.h  binding.cpp
